[package]
name = "flarie_macros"
version = "0.1.0"
authors = ["antholeole <antholeinik@gmail.com>"]
license = "MIT"
description = "proc macros for Flarie"
homepage = "https://github.com/antholeole/flarie"
edition = "2018"
documentation = "https://github.com/antholeole/flarie"
repositiory = "https://github.com/antholeole/flarie.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true
