[package]
name = "flarie_macros"
version = "0.1.0"
authors = ["antholeole <antholeinik@gmail.com>"]
license = "MIT"
description = "proc macros for Flarie"
homepage = "https://github.com/antholeole/flarie"
edition = "2018"
documentation = "https://github.com/antholeole/flarie"
repositiory = "https://github.com/antholeole/flarie.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flarie = { path = "../flarie" }
syn = { version = "1.0", features=["full", "extra-traits"] } #TODO remove etra traits
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

