[package]
name = "scratch"
version = "0.1.0"
authors = ["antholeole <antholeinik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flarie = { path = "../flarie" }
flarie_macros = { path = "../flarie_macros" }
uuid = "0.8.2"
reqwest = "0.11"